--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,7 @@
       
         <div id="content-wrapper" class="span-16">
           <div id="content">
+            <div id="logo"><%= image_tag 'logo.png' %></div>
             <%= yield %>
           </div>
         </div>
