tweak the sidebar

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,6 +1,6 @@
 <div class="spot">
-  <%= image_tag "ruby.png" %>
-  <h3>What's Ruby?</h3>
+  <%= image_tag "europe.png" %>
+  <h3>What's EuRuKo?</h3>
   <p>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit,
     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -12,7 +12,23 @@
 <div class="spot">
   <%= image_tag "twitter.png" %>
   <h3>Follow us on Twitter</h3>
-  <p>Mauris elit lacus, iaculis a, cons nec, vehicula <a href="/about">condimentum</a> at. Suspendisse sapien enim, tempus ut, facilisis at, vestibulum nec, nunc. Aliquam erat volutpat. Ut sit amet quam. Cum soci natoque penati et magnis dis partur montes, nascet ridiculus mus. Aen vel urna. In justo nisl, cursus in, molestie a, vulputate nec. </p> 
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+    nisi ut aliquip ex ea commodo consequat.
+  </p>
+</div>
+
+<div class="spot">
+  <%= image_tag "ruby.png" %>
+  <h3>Got Ruby?</h3>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+    nisi ut aliquip ex ea commodo consequat.
+  </p>
 </div>
 
 <div class="spot">
@@ -20,14 +36,11 @@
   <p>Donec tempor mollis ante. Nunc felis. Proin ac pede vel nulla lacinia congue. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Morbi cursus, dui quis pretium blandit, erat massa lacinia neque, eu porttitor lacus erat ac leo.</p>
 </div>
 
-<div class="box">
-  <h3>Our Newsletter</h3>
-  <input type="text" name="" id="" onfocus="this.value=''" value="Enter your email address..." class="email"/>
-  <input type="submit" value="Subscribe" class="subscribe"/>
-</div>
-
-<div class="spot">
-  <%= image_tag "rss.png" %>
-  <h3>RSS</h3>
-  <p>Get the <a href="/rss/">feed</a> for our latest news. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora.</p>
+<div class="spot box">
+  <h3>Contact Us</h3>
+  <p>
+    The conference is organised this year by the Spanish Ruby Users Group
+    or as we like to call it <a href="http://www.srug.org">SRUG</a>.
+  </p>
+  <p>You can join to the <a href="http://groups.google.es/group/euruko-spain-2009?hl=es">mailing list</a>.</p>
 </div>
