--- a/app/views/users/forgot_password.html.erb
+++ b/app/views/users/forgot_password.html.erb
@@ -1,6 +1,8 @@
 <% title "Reseting Password" %>
 
-<p>Can't you remember your password?, reset it!</p>
+<hr />
+
+<h3><%= yield(:title) %></h3>
 
 <% form_tag url_for(:action => 'forgot_password') do %>
   <p>
@@ -11,3 +13,7 @@
     <%= submit_tag 'Get a new password' %>
   </p>
 <% end %>
+
+<hr />
+
+<!-- <p>Can't you remember your password? <%= link_to "Reset it!", reset_password_path %></p> -->
