--- a/app/views/users/reset_password.html.erb
+++ b/app/views/users/reset_password.html.erb
@@ -1,5 +1,9 @@
 <% title "Reset your password" %>
 
+<hr />
+
+<h3><%= yield(:title) %></h3>
+
 <%= error_message_on @user, :password, :prepend_text => 'Invalid password: ' %>
 
 <% form_tag reset_password_path(:id => params[:id]) do %>
