--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -4,7 +4,7 @@
     <%= menu_to 'Calendar', calendar_path %>
     <%= menu_to 'Talks', papers_path %>
     <% if logged_in? %>
-      <%= link_to_unless_current '(Submit yours)', new_paper_path %>
+      <%= menu_to 'Submit Talk', new_paper_path %>
     <% end %>
     <%= menu_to 'People', users_path(:page => 1) %>
     <%= menu_to 'Blog', 'http://euruko2009.org' %>
