--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,13 @@
   <head xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <title>EuRuKo 2009 - <%= yield(:title) || "European Ruby Conference" %></title>
-    <!-- link rel="shortcut icon" href="favicon.ico" /-->
+    <link rel="shortcut icon" href="favicon.ico" />
 
     <%= stylesheet_link_tag 'reset', :media => 'screen, projection' %>
     <%= stylesheet_link_tag 'screen', :media => 'screen, projection' %>
+    <%= stylesheet_link_tag 'forms', :media => 'screen, projection' %>
     <%= stylesheet_link_tag 'print', :media => 'print' %>
+
     <!--[if IE]> 
       <%= stylesheet_link_tag 'ie', :media => "screen, projection" %>  
     <![endif]-->
@@ -38,15 +40,8 @@
         </div>
       
         <div id="sidebar-wrapper">
-          <div id="sidebar">
-            <% if admin? %>
-              <div id="admin-menu">
-                <%= render :partial => 'layouts/admin_menu' %>
-              </div>
-            <% end %>
-      
+          <div id="sidebar">      
             <%= render :partial => 'layouts/sidebar' %>
-
           </div>
         </div>
         
