--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,10 @@
 <% title "Sign up as a new user" %>
 
-<% @user.password = @user.password_confirmation = nil %>
+<hr/>
 
+<h3><%= yield(:title) %></h3>
+
+<% @user.password = @user.password_confirmation = nil %>
 <%= error_messages_for :user %>
 
 <% form_for @user, :url => users_path do |f| -%>
@@ -20,8 +23,7 @@
   <p><%= label_tag 'password_confirmation', 'Confirm Password' %><br/>
   <%= f.password_field :password_confirmation %></p>
   
-  <p><%= f.check_box :public_profile %>
-  <%= label_tag 'public_profile', 'Public Profile' %> (email will not be shown)</p>
+  <p><%= f.check_box :public_profile %><%= label_tag 'public_profile', 'Public Profile' %> <span class="tip">(email will not be shown)</span></p>
   
   <p><%= submit_tag 'Sign up' %></p>
 <% end -%>
