--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -24,7 +24,7 @@
     <%= menu_to 'Logout', logout_path %>
   <% else %>
     <%= menu_to 'Login', new_session_path %>
-    <%= menu_to 'Register', new_user_path, :class => "highlight" %>
+    <%= menu_to 'Signup', new_user_path, :class => "highlight" %>
   <% end %>
   </ul>
 </div>
