--- a/app/views/papers/index.html.erb
+++ b/app/views/papers/index.html.erb
@@ -4,7 +4,7 @@
 
 <div id="extra">
   <div class="box">
-    <%= link_to image_tag('register.png'), register_path, :id => "register-button" %>
+    <%= link_to image_tag('register.png'), signup_path, :id => "register-button" %>
     <h5>Registration open!</h5>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit,
