--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,22 +8,26 @@
 <%= error_messages_for :user %>
 
 <% form_for @user, :url => users_path do |f| -%>
-  <p><%= label_tag 'login' %><br/>
+  <p><%= label_tag 'login' %> <span class="required">*</span><br/>
   <%= f.text_field :login %></p>
 
   <p><%= label_tag 'name' %><br/>
   <%= f.text_field :name %></p>
 
-  <p><%= label_tag 'email' %><br/>
+  <p><%= label_tag 'email' %> <span class="required">*</span><br/>
   <%= f.text_field :email %></p>
 
-  <p><%= label_tag 'password' %><br/>
+  <p><%= label_tag 'password' %> <span class="required">*</span><br/>
   <%= f.password_field :password %></p>
 
-  <p><%= label_tag 'password_confirmation', 'Confirm Password' %><br/>
+  <p><%= label_tag 'password_confirmation', 'Confirm Password' %> <span class="required">*</span><br/>
   <%= f.password_field :password_confirmation %></p>
   
   <p><%= f.check_box :public_profile %><%= label_tag 'public_profile', 'Public Profile' %> <span class="tip">(email will not be shown)</span></p>
   
   <p><%= submit_tag 'Sign up' %></p>
 <% end -%>
+
+<hr />
+
+<p class="notes">Fields marked with <span class="required">*</span> are required fields</p>
