--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,19 +8,19 @@
 <%= error_messages_for :user %>
 
 <% form_for @user, :url => users_path do |f| -%>
-  <p><%= label_tag 'login' %> <span class="required">*</span><br/>
+  <p><%= f.label :label, 'Login', :required => true %><br/>
   <%= f.text_field :login %></p>
 
-  <p><%= label_tag 'name' %><br/>
+  <p><%= f.label :name, 'Name' %><br/>
   <%= f.text_field :name %></p>
 
-  <p><%= label_tag 'email' %> <span class="required">*</span><br/>
+  <p><%= f.label :email, 'Email', :required => true %><br/>
   <%= f.text_field :email %></p>
 
-  <p><%= label_tag 'password' %> <span class="required">*</span><br/>
+  <p><%= f.label :password, 'Password', :required => true %><br/>
   <%= f.password_field :password %></p>
 
-  <p><%= label_tag 'password_confirmation', 'Confirm Password' %> <span class="required">*</span><br/>
+  <p><%= f.label :password_confirmation, 'Confirm Password', :required => true %><br/>
   <%= f.password_field :password_confirmation %></p>
   
   <p><%= f.check_box :public_profile %><%= label_tag 'public_profile', 'Public Profile' %> <span class="tip">(email will not be shown)</span></p>
