--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -56,7 +56,7 @@ h3 a:hover {
 
 h4 {
   font-family: Georgia, Times, "Times New Roman";
-  font-size: 125%;
+  font-size: 140%;
   margin: 0px; }
 
 h4 a {
@@ -89,9 +89,8 @@ a:hover {
   border-bottom: 1px solid #E20202; }
 
 p {
-  color: #232323;
-  font-family: Georgia, Times, "Times New Roman";
-  font-size: 1.2em;
+  color: #111;
+  font-family: Helvetica, Arial, Verdana, sans-serif;
   line-height: 1.25em;
   margin: 0px 0px 10px; }
 
@@ -159,7 +158,8 @@ hr {
   font-size: 1em; }
 
 .entry p {
-  font-size: 1.1em; }
+  font-size: 1.05em;
+  line-height: 1.45em; }
 
 .entry img {
   float: left;
