--- a/app/views/papers/new.html.erb
+++ b/app/views/papers/new.html.erb
@@ -9,7 +9,7 @@
   <%= f.error_messages %>
   
   <%= render :partial => 'basic_form', :locals => { :f => f } %>
-  <p><%= f.submit "Create" %></p>
+  <p><%= f.submit "Submit your talk" %></p>
 <% end %>
 
 <hr/>
