--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -153,6 +153,10 @@ hr {
   padding-bottom: 5px;
 }
 
+.entry a {
+  font-family: Georgia, Times, "Times New Roman";
+}
+
 .entry .info {
   margin-top: 1em;
   font-size: 1em; }
@@ -165,43 +169,47 @@ hr {
   float: left;
   margin: 0 16px 8px 0; }
 
-.entry .avatar, .person img {
-  border: 1px solid #333333; }
+.actions {
+  margin-top: 5px; }
 
-.posted {
-  color: #918C7E;
-  font-family: "Lucida Grande", Arial, Helvetica, Verdana, sans-serif;
-  font-size: 12px;
-  margin: 5px 0 5px;
-  padding: 0px; }
+.actions a {
+  padding: 0;
+  font-size: 11px;
+  font-family: "Lucida Grande", Arial, Helvetica, Verdana, sans-serif; }
 
-.posted em {
+.actions em {
   color: #451811;
   font-style: italic;
   margin: 0px 6px;
   font-weight: bold; }
 
-.posted img {
+.actions img {
   background: transparent none repeat scroll 0 0;
   border: medium none;
-  margin: 0 0 -5px 5px;
+  margin: 0 2px -4px 0;
   text-decoration: none;
   float: none; }
+  
+.tiny-actions {
+  margin-top: 2px;
+  clear: both;
+}
 
-.person {
+.tiny-actions a {
+  border: none;
+}
+
+.grid-item {
   float: left;
   display: block;
   text-align: center;
   width: 86px;
-  height: 100px;
+  height: 120px;
   margin-right: 10px;
   font-size: 80%; }
 
-.person img {
-  width: 50px;
-  height: 50px; }
-
-/*--- styles ---*/ 
+.avatar {
+  border: 1px solid #333333; }
 
 #extra {
   margin-bottom: 10px; }
@@ -302,6 +310,9 @@ hr {
 .right {
   float: right; }
 
+.pagination {
+  clear: both; }
+
 /*--- footer ---*/ 
 
 #footer-wrapper {
@@ -362,17 +373,30 @@ hr {
   background: #111111;
   border-bottom: 1px solid #000000; }
 
-.bar {
-  font-size: 11px;
-  float: right; }
-
-.bar p {
-  font-family: Verdana, Arial, Helvetica, sans-serif;
-  color: #555; }
-  
 #user-menu {
   float: right; }
 
 #user-menu ul li a {
   background-position: top left; }
   
+.bar, .pagination {
+  color: #999;
+  font-size: 11px;
+  float: right; }
+
+.bar p, .pagination p {
+  color: #999;
+  font-family: Verdana, Arial, Helvetica, sans-serif; }
+
+.bar a, .pagination a {
+  color: #000; }
+
+.bar a:hover, .pagination a:hover {
+  border-color: #000; }
+
+.date {
+  font-family: Verdana;
+  margin-right: 2px;
+  color: #111;
+  font-size: 10px;
+}
