--- a/app/views/papers/index.html.erb
+++ b/app/views/papers/index.html.erb
@@ -3,6 +3,7 @@
 <% if current_page?('/') %>
   <div id="cover"><%= image_tag 'cover.png' %></div>
 
+  <% if !logged_in? %>
   <div id="extra">
     <div class="box">
       <%= link_to image_tag('register.png'), signup_path, :id => "register-button" %>
@@ -13,6 +14,7 @@
       </p>
     </div>
   </div>
+  <% end %>
 <% else%>
   <hr/>
 <% end %>
